# holochain-runner

./: .gitignore  Cargo.toml  README.md  build-lair.sh  dry-run.sh  rust.yml  zip-m1.sh
.github/workflows/: release.yml  rust.yml
crates/embedded-holochain-runner/: README.md
crates/embedded-holochain-runner/src/: generate_key.rs  lib.rs
crates/holochain-runner/: Cargo.toml  README.md  dry-run.sh
crates/holochain-runner/src/: main.rs
src/: config.rs  embedded_runner.rs  generate_key.rs  install_enable.rs  main.rs  read_passphrase_secure.rs
test/: profiles-test.happ
