[package]
name = "holochain-runner"
version = "0.7.9"
description = "a Holochain runtime binary with key management, good defaults, and Status Update events. Suitable for development and production environments"
authors = ["Connor Turland <connor@sprillow.com>", "Wesley Finck <wesleyfinck@gmail.com>", "Karl Bonnici <karlbonnici100@gmail.com>"]
license = "CAL-1.0"
repository = "https://github.com/lightningrodlabs/holochain-runner"
edition = "2021"

[dependencies]
structopt = "0.3"
base64 = "0.21"
serde = "1.0"
futures = "0.3"
human-panic = "1.2.0"
tracing = "0.1.26"
one_err = "0.0.8"
sodoken = "0.0.9"
tokio = { version = "1.32", features = ["full"] }
observability = "0.1.3"
either = "1.9.0"
holochain_util = "0.2.2"
holochain_p2p = "0.2.3-beta-rc.0"
holochain_types = "0.2.3-beta-rc.0"
holochain_zome_types = "0.2.3-beta-rc.0"
holochain_keystore = "0.2.3-beta-rc.0"
holochain = "0.2.3-beta-rc.1"
hdk = "0.2.3-beta-rc.0"
contrafact = "0.2.0-rc.1"
# termination feature enables handling of SIGTERM events as well on unix
ctrlc = { version = "3.4.1", features = ["termination"] }
dotenvs = "0.1.0"

[features]
sqlite-encrypted = [ "holochain/sqlite-encrypted"]
